--- a/src/app/main/board/task-view/task-view.html
+++ b/src/app/main/board/task-view/task-view.html
@@ -4,43 +4,76 @@
 			<span class="type">User Story</span>
 		</div>
 		<div class="close">
-      <img src="/images/assets/close_cross.svg" alt="" />
-    </div>
+			<img src="/images/assets/close_cross.svg" alt="" />
+		</div>
 	</header>
 
 	<div class="content">
 		<div class="headline">
-      <h1 class="task-title">CSS Architecture Planning</h1>
-      <span class="task-description">
-        Define CSS naming conventions and structure.
-      </span>
-    </div>
+			<h1 class="task-title">CSS Architecture Planning</h1>
+			<span class="task-description"> Define CSS naming conventions and structure. </span>
+		</div>
 
-		<time class="task-due-date" datetime="2023-09-02">
-      Due: 02/09/2023
-    </time>
-		<span class="task-priority">
-      Priority: Urgent
-    </span>
+		<div class="task-conditions">
+			<div class="task-due-date">
+        <div class="date-headline">
+          <h3>Due date:</h3>
+        </div>
+        <div class="date">
+          <time datetime="2023-09-02"> 02/09/2023 </time>
+        </div>
+			</div>
+			<div class="task-priority">
+				<div class="priority-headline">
+          <h3>Priority:</h3>
+        </div>
+        <div>
+          <span class="priority"> Urgent </span>
+        </div>
+			</div>
+		</div>
 
 		<div class="task-assignees">
-			<span>Assigned To:</span>
-			<div>
-				<li class="assignee">
-					<span class="avatar" style="background-color: #007bff">SM</span>
-					Sofia Müller (You)
-				</li>
-				<li class="assignee">
-					<span class="avatar" style="background-color: #6f42c1">BZ</span>
-					Benedikt Ziegler
-				</li>
+      <div class="assignee-headline">
+        <h3>Assigned To:</h3>
+      </div>
+			<div class="assignees">
+
+				<div class="assignee">
+          <div class="initial">
+            <span class="bubble">SM</span>
+          </div>
+          <div class="contact">
+            <span>Sofia Müller</span>
+          </div>
+				</div>
+
+				<div class="assignee">
+          <div class="initial">
+            <span class="bubble">SM</span>
+          </div>
+          <div class="contact">
+            <span>Sofia Müller</span>
+          </div>
+				</div>
+
+        <div class="assignee">
+          <div class="initial">
+            <span class="bubble">SM</span>
+          </div>
+          <div class="contact">
+            <span>Sofia Müller</span>
+          </div>
+				</div>
+
 			</div>
 		</div>
 
 		<div class="task-subtasks">
-			<span>Subtasks:</span>
-				<input type="checkbox" checked disabled /> Establish CSS Methodology
-				<input type="checkbox" checked disabled /> Setup Base Styles
+			<h3>Subtasks:</h3>
+			<input type="checkbox" /> Establish CSS Methodology
+      <input type="checkbox" /> Setup Base
+			Styles
 		</div>
 	</div>
 
