--- a/src/app/main/board/task-view/task-view.html
+++ b/src/app/main/board/task-view/task-view.html
@@ -16,64 +16,74 @@
 
 		<div class="task-conditions">
 			<div class="task-due-date">
-        <div class="date-headline">
-          <h3>Due date:</h3>
-        </div>
-        <div class="date">
-          <time datetime="2023-09-02"> 02/09/2023 </time>
-        </div>
+				<div class="date-headline">
+					<h3>Due date:</h3>
+				</div>
+				<div class="date">
+					<time datetime="2023-09-02"> 02/09/2023 </time>
+				</div>
 			</div>
 			<div class="task-priority">
 				<div class="priority-headline">
-          <h3>Priority:</h3>
-        </div>
-        <div>
-          <span class="priority"> Urgent </span>
-        </div>
+					<h3>Priority:</h3>
+				</div>
+				<div>
+					<span class="priority"> Urgent </span>
+				</div>
 			</div>
 		</div>
 
 		<div class="task-assignees">
-      <div class="assignee-headline">
-        <h3>Assigned To:</h3>
-      </div>
+			<div class="assignee-headline">
+				<h3>Assigned To:</h3>
+			</div>
 			<div class="assignees">
+				<div class="assignee">
+					<div class="initial">
+						<span class="bubble">SM</span>
+					</div>
+					<div class="contact">
+						<span>Sofia Müller</span>
+					</div>
+				</div>
 
 				<div class="assignee">
-          <div class="initial">
-            <span class="bubble">SM</span>
-          </div>
-          <div class="contact">
-            <span>Sofia Müller</span>
-          </div>
+					<div class="initial">
+						<span class="bubble">SM</span>
+					</div>
+					<div class="contact">
+						<span>Sofia Müller</span>
+					</div>
 				</div>
-
-				<div class="assignee">
-          <div class="initial">
-            <span class="bubble">SM</span>
-          </div>
-          <div class="contact">
-            <span>Sofia Müller</span>
-          </div>
-				</div>
-
-        <div class="assignee">
-          <div class="initial">
-            <span class="bubble">SM</span>
-          </div>
-          <div class="contact">
-            <span>Sofia Müller</span>
-          </div>
-				</div>
-
 			</div>
 		</div>
 
 		<div class="task-subtasks">
-			<h3>Subtasks:</h3>
-			<input type="checkbox" /> Establish CSS Methodology
-      <input type="checkbox" /> Setup Base
-			Styles
+			<div class="subtask-headline">
+				<h3>Subtasks:</h3>
+			</div>
+
+			<div class="subtasks">
+
+				<div class="subtask">
+					<div class="checkbox">
+						<input type="checkbox" />
+					</div>
+					<div class="task">
+						<span> Establish CSS Methodology </span>
+					</div>
+				</div>
+
+				<div class="subtask">
+					<div class="checkbox">
+						<input type="checkbox" />
+					</div>
+					<div class="task">
+						<span> Setup Base Styles </span>
+					</div>
+				</div>
+
+			</div>
 		</div>
 	</div>
 
