--- a/src/app/main/board/task-view/task-view.scss
+++ b/src/app/main/board/task-view/task-view.scss
@@ -101,6 +101,8 @@
 			flex-direction: column;
 			margin-bottom: 8px;
 			width: 100%;
+      height: 180px;
+      overflow-y: auto;
 		}
 
 		.assignee-headline {
@@ -149,6 +151,24 @@
     .task-subtasks {
       display: flex;
       flex-direction: column;
+      overflow-y: auto;
+      height: 90px;
+
+      .subtask-headline {
+        margin-bottom: 12px;
+      }
+
+      .subtasks {
+        display: flex;
+        flex-direction: column;
+        padding-left: 12px;
+
+        .subtask {
+          display: flex;
+          gap: 12px;
+          margin-bottom: 8px;
+        }
+      }
     }
 	}
 
