open & close taask-view overlay
The Task button is a temporary component to test the opening and closing of the overlay.

--- a/src/app/main/board/task-view/task-view.html
+++ b/src/app/main/board/task-view/task-view.html
@@ -3,7 +3,7 @@
 		<div class="task-type">
 			<span class="type">User Story</span>
 		</div>
-		<div class="close">
+		<div class="close" (click)="closeOverlay()">
 			<img src="/images/assets/close_cross.svg" alt="" />
 		</div>
 	</header>
