--- a/src/app/main/board/board.html
+++ b/src/app/main/board/board.html
@@ -1,2 +1,17 @@
-<!-- <p>board works!</p> -->
-<app-task-view></app-task-view>
+
+<section>
+<button (click)="openTaskView()">Task</button>
+
+  @if (isTaskViewOpen) {
+    <div class="overlay-wrapper">
+      <div class="overlay-backdrop" (click)="closeTaskView()"></div>
+
+      <app-task-view
+        (closed)="closeTaskView()"
+        (open)="openTaskView()"
+      />
+    </div>
+  }
+
+</section>
+
