--- a/src/app/main/board/popover-mobile/popover-mobile.scss
+++ b/src/app/main/board/popover-mobile/popover-mobile.scss
@@ -31,6 +31,7 @@ button:not(.toggle-btn):active {
 }
 
 .toggle-btn {
+	position: relative;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -72,4 +73,8 @@ button:not(.toggle-btn):active {
 
 .secondary .option:hover {
 	filter: brightness(200%);
+}
+
+.option-text {
+	text-wrap: nowrap;
 }
