--- a/src/app/main/board/task-view/task-view.html
+++ b/src/app/main/board/task-view/task-view.html
@@ -23,13 +23,21 @@
 					<time datetime="2023-09-02"> 02/09/2023 </time>
 				</div>
 			</div>
+
 			<div class="task-priority">
 				<div class="priority-headline">
 					<h3>Priority:</h3>
 				</div>
-				<div>
-					<span class="priority"> Urgent </span>
+
+				<div class="priority-tag">
+					<div>
+						<span class="priority"> Urgent </span>
+					</div>
+					<div class="priority-img">
+						<img src="/images/board_section/prio_alta.svg" alt="" />
+					</div>
 				</div>
+
 			</div>
 		</div>
 
@@ -64,7 +72,6 @@
 			</div>
 
 			<div class="subtasks">
-
 				<div class="subtask">
 					<div class="checkbox">
 						<input type="checkbox" />
@@ -82,7 +89,6 @@
 						<span> Setup Base Styles </span>
 					</div>
 				</div>
-
 			</div>
 		</div>
 	</div>
