--- a/src/app/main/board/edit-task/edit-task.html
+++ b/src/app/main/board/edit-task/edit-task.html
@@ -139,6 +139,7 @@
 							<img src="images/add_task_section/arrow_drop_downaa.svg" />
 						</span>
 					</div>
+
 					<ul class="dropdown-list" *ngIf="assignedDropdownOpen">
 						<li
 							*ngFor="let person of ['Madina', 'Calvin', 'Falko', 'Christoph', 'Philip']"
@@ -148,6 +149,7 @@
 							{{ person }}
 						</li>
 					</ul>
+
 				</div>
 			</div>
 
@@ -184,28 +186,82 @@
 
 			<div class="form-row">
 				<label class="label">Subtasks</label>
-				<input
-					class="input text-input"
-					type="text"
-					placeholder="Add new subtask"
-					[(ngModel)]="subtask"
-					name="subtask"
-					(focus)="subtaskFocus = true"
-					(blur)="subtaskFocus = false"
-					[ngClass]="{ focus: subtaskFocus }"
-				/>
+
+				<!-- Add new subtask -->
+				<div class="subtask-input-group">
+					<input
+						class="input subtask-input"
+						type="text"
+						placeholder="Add new subtask"
+						[(ngModel)]="subtask"
+						name="subtask"
+						(focus)="subtaskFocus = true"
+						(blur)="onSubtaskBlur()"
+						[ngClass]="{ focus: subtaskFocus }"
+						(keyup.enter)="confirmSubtask()"
+					/>
+
+					<div class="icon-overlay" *ngIf="subtaskFocus || subtask.trim()">
+						<button type="button" (click)="confirmSubtask()" aria-label="Save subtask">
+							<img src="images/assets/check.svg" alt="" />
+						</button>
+						|
+						<button type="button" (click)="cancelSubtask()" aria-label="Cancel subtask">
+							<img src="images/assets/close_mobile.svg" alt="" />
+						</button>
+					</div>
+				</div>
+
+				<!-- List of subtasks -->
+				<ul class="subtask-list">
+					<li class="subtask-item" *ngFor="let st of subtasks; let i = index">
+						<span class="bullet-point">•</span>
+
+						<ng-container *ngIf="st.isEditing; else readonlyTitle">
+							<div class="subtask-edit-row">
+								<input
+									type="text"
+									[(ngModel)]="st.title"
+									name="title{{ i }}"
+									class="subtask-edit-input"
+									placeholder="Subtask title"
+								/>
+								<div class="edit-actions">
+									<button type="button" (click)="confirmEdit(i)" aria-label="Save subtask">
+										<img src="images/assets/check.svg" alt="" />
+									</button>
+                  |
+									<button type="button" (click)="removeSubtask(i)" aria-label="Delete subtask">
+										<img src="images/assets/delete_icon_white.svg" alt="" />
+									</button>
+								</div>
+							</div>
+						</ng-container>
+
+						<ng-template #readonlyTitle>
+							<span class="subtask-title-text">{{ st.title }}</span>
+						</ng-template>
+
+						<div class="subtask-actions" *ngIf="!st.isEditing">
+							<button type="button" (click)="enableEditing(i)" aria-label="Edit subtask">
+								<img src="images/add_task_section/edit.svg" alt="" />
+							</button>
+							|
+							<button type="button" (click)="removeSubtask(i)" aria-label="Delete subtask">
+								<img src="images/add_task_section/delete_icon.svg" alt="" />
+							</button>
+						</div>
+					</li>
+				</ul>
 			</div>
 
 			<div class="bottom-spacer" aria-hidden="true"></div>
 		</div>
-
-
 	</div>
 
 	<footer class="task-actions">
-
-    <div class="form-actions" role="toolbar" aria-label="Form actions">
-			<button class="btn-create" type="button">
+		<div class="form-actions" role="toolbar" aria-label="Form actions">
+			<button class="btn-create" type="button" (click)="saveTask()">
 				OK <img src="images/assets/check.svg" />
 			</button>
 		</div>
