--- a/src/app/main/board/edit-task/edit-task.scss
+++ b/src/app/main/board/edit-task/edit-task.scss
@@ -137,14 +137,14 @@
 			align-items: center;
 			justify-content: center;
 			gap: 4px;
-			padding: 5px;
+			padding: 4px;
 			border-radius: 6px;
 			border: 1px solid var(--bg-color-gray-darker);
 			background: var(--bg-color-white);
 			font-weight: var(--fw-semibold);
-			font-size: 14px !important;
+			font-size: var(--fs-small);
 			color: var(--text-color-black);
-			height: 32px;
+			height: 36px;
 			width: 45px;
 			cursor: pointer;
 			box-shadow: 0 2px 0 rgba(0, 0, 0, 0.03);
@@ -152,7 +152,7 @@
 			button {
 				span {
 					> img {
-						height: 8px;
+						height: 6px;
 					}
 				}
 			}
@@ -232,6 +232,173 @@
 			color: var(--text-color-blue);
 			pointer-events: none;
 		}
+
+		.subtask-input-group {
+			position: relative;
+			width: 100%;
+
+			.subtask-input {
+				width: 100%;
+				padding-right: 70px; // Platz für Icons
+				border-radius: 12px;
+				padding: 12px 14px;
+				font-size: var(--fs-small);
+				border: 1px solid var(--bg-color-gray-darker);
+				background: var(--bg-color-white);
+				outline: none;
+
+				&.focus {
+					border-color: var(--bg-color-blue-lighter);
+				}
+			}
+
+			.icon-overlay {
+				position: absolute;
+				top: 50%;
+				right: 12px;
+				transform: translateY(-50%);
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				gap: 6px;
+
+				button {
+					display: flex;
+					background-color: #2a3647;
+					border: none;
+					border-radius: 20px;
+					height: 26px;
+					width: 26px;
+					justify-content: center;
+					align-items: center;
+					cursor: pointer;
+				}
+
+				.icon-btn {
+					background: transparent;
+					border: none;
+					font-size: 1.2rem;
+					cursor: pointer;
+					padding: 4px;
+					border-radius: 6px;
+
+					&:hover {
+						background-color: rgba(0, 0, 0, 0.05);
+					}
+				}
+			}
+		}
+
+		.subtask-item {
+			display: flex;
+			align-items: center;
+			gap: 8px;
+			padding: 8px 12px;
+			border-radius: 8px;
+			transition: background-color 0.2s ease;
+
+			&:hover {
+				background-color: rgba(0, 0, 0, 0.05); // grauer Hintergrund
+			}
+
+			.subtask-actions {
+				margin-left: auto;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				gap: 6px;
+				opacity: 0;
+				transition: opacity 0.2s ease;
+			}
+
+			&:hover .subtask-actions {
+				opacity: 1;
+			}
+
+			.subtask-title-input {
+				flex: 1;
+				border: none;
+				background: transparent;
+				font-weight: 400;
+				color: black;
+				outline: none;
+			}
+
+			button {
+				background: none;
+				border: none;
+				cursor: pointer;
+				padding: 4px;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+
+				img {
+					width: 18px;
+					height: 18px;
+				}
+
+				&:hover {
+					background-color: rgba(0, 0, 0, 0.2);
+					border-radius: 20px;
+					height: 26px;
+					width: 26px;
+				}
+			}
+
+			.subtask-edit-row {
+				display: flex;
+				align-items: center;
+				width: 100%;
+				border-bottom: 2px solid var(--bg-color-blue-lighter);
+				padding-bottom: 4px;
+				gap: 8px;
+
+				.subtask-edit-input {
+					flex: 1;
+					border: none;
+					outline: none;
+					font-weight: bold;
+					font-size: var(--fs-small);
+					background: transparent;
+					color: #2a3647;
+				}
+
+				.edit-actions {
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					gap: 6px;
+
+					button {
+						background: none;
+						border: none;
+						cursor: pointer;
+						padding: 4px;
+						background-color: #838383;
+						border-radius: 20px;
+						height: 26px;
+						width: 26px;
+						display: flex;
+						justify-content: center;
+						align-items: center;
+
+						img {
+							width: 18px;
+							height: 18px;
+						}
+
+						&:hover {
+							background-color: #2a3647;
+							border: none;
+							border-radius: 20px;
+							height: 26px;
+							width: 26px;
+						}
+					}
+				}
+			}
+		}
 	}
 
 	footer {
@@ -254,8 +421,9 @@
 			padding: 4px;
 
 			&:hover {
-				background: #2d3e50;
+				background: #284361;
 				cursor: pointer;
+        box-shadow: 1px 1px 8px 1px #43505e;
 			}
 		}
 	}
