--- a/src/app/main/board/board-view/board-view.scss
+++ b/src/app/main/board/board-view/board-view.scss
@@ -21,8 +21,10 @@
 
 	.header-controls {
 		display: flex;
+    align-items: stretch;
 		justify-content: space-between;
 		gap: 1rem;
+
 	}
 }
 
@@ -33,8 +35,6 @@
 }
 
 .column-status {
-	flex-shrink: 0;
-
 	.column-title {
 		font-size: var(--fs-text);
 		font-weight: var(--fw-bold);
@@ -60,10 +60,12 @@
 
 	.board-header {
 		// Desktop: Suchfeld und Button in einer Reihe zentrieren
+    display: flex;
 		flex-direction: row;
 		justify-content: space-between;
 		align-items: center;
 		margin-bottom: 2rem;
+    height: 44px;
 
 		.board-title {
 			// Anpassung der Schriftgröße für Desktop
@@ -75,8 +77,20 @@
 			display: flex;
 			justify-content: flex-end;
 			min-width: 400px;
+      padding-right: 100px;
+
 		}
+
+    .desktop-add-button{
+      width: 300px;
+    }
+
 	}
+
+    .desktop-headline-btn{
+      display: flex;
+      justify-content: space-between;
+    }
 
 	.board-columns {
 		// Wichtig: Desktop-Ansicht mit Spalten nebeneinander
@@ -84,13 +98,13 @@
 		gap: 2rem;
 		overflow-x: auto; // Ermöglicht horizontales Scrollen, falls die Tasks sehr breit werden
 		height: calc(100vh - var(--header-height) - 100px); // Beispiel für fixe Höhe
+    width: 100%;
 	}
 
 	.column-status {
 		// Jede Spalte soll gleich breit sein und nicht schrumpfen
-		min-width: 250px; // Minimale Breite für eine bessere Ansicht
-		width: 25%;
 		flex-grow: 1;
+    flex-basis: 100px;
 
 		.column-body {
 			// Auf Desktop: Feste Höhe für Scrollbarkeit innerhalb der Spalte
