--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,34 +14,25 @@ html {
 	@include mat.theme(
 		(
 			color: (
-				primary: mat.$magenta-palette,
+				primary: mat.$blue-palette,
 				tertiary: mat.$violet-palette,
 			),
 			typography: Roboto,
 			density: 0,
 		)
 	);
+
+	scroll-behavior: smooth;
+	height: 100%;
 }
 
 body {
-	// Default the application to a light color theme. This can be changed to
-	// `dark` to enable the dark color theme, or to `light dark` to defer to the
-	// user's system settings.
-	color-scheme: light;
-
-	// Set a default background, font and text colors for the application using
-	// Angular Material's system-level CSS variables. Learn more about these
-	// variables at https://material.angular.dev/guide/system-variables
-	background-color: var(--mat-sys-surface);
-	color: var(--mat-sys-on-surface);
-	font: var(--mat-sys-body-medium);
-
-	// Reset the user agent margin.
+	height: 100dvh;
 	margin: 0;
-}
-
-html {
-	scroll-behavior: smooth;
+	overflow-y: clip;
+	font-family: Inter, sans-serif;
+	font-size: var(--fs-text);
+	font-weight: var(--fw-regular);
 }
 
 *,
@@ -76,14 +67,6 @@ h4 {
 	font-size: var(--fs-h4);
 }
 
-body {
-	height: 100dvh;
-	overflow-y: clip;
-	font-family: Inter, sans-serif;
-	font-size: var(--fs-text);
-	font-weight: var(--fw-regular);
-}
-
 // text elements
 p,
 span,
@@ -116,15 +99,6 @@ button,
 	font-family: Inter, sans-serif;
 	font-size: var(--fs-button);
 	font-weight: var(--fw-regular);
-}
-
-html,
-body {
-	height: 100%;
-}
-body {
-	margin: 0;
-	font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 .mat-datepicker-content .mat-calendar {
