--- a/src/app/main/board/board-card/board-card.scss
+++ b/src/app/main/board/board-card/board-card.scss
@@ -12,9 +12,10 @@
 }
 
 .container {
+	height: 300px;
 	display: flex;
 	flex-direction: column;
-	row-gap: 2rem;
+	justify-content: space-between;
 	width: 100%;
 	background-color: var(--bg-color-white);
 	box-shadow: 0 0 10px 3px #00000014;
