--- a/src/app/main/board/board-view/board-view.scss
+++ b/src/app/main/board/board-view/board-view.scss
@@ -103,10 +103,11 @@
 			> img {
 				width: 32px;
 			}
-		}
-		.desktop-btn:hover {
-			border-color: rgba(41, 171, 226, 1);
-			transform: scale(0.98);
+
+			&:hover {
+				background: var(--bg-color-blue-lighter);
+				transform: scale(0.98);
+			}
 		}
 	}
 
@@ -136,17 +137,17 @@
 			padding: 0.5rem;
 		}
 	}
-	/*
-  .add-task-btn{
-    display: flex;
-    width: 260px;
-    height: 48px;
-  }
- */
+
 	.btn-overlay {
 		background-image: url("../../../../../public/images/board_section/plus_button.svg");
 		width: 32px;
 		height: 32px;
 		background-repeat: no-repeat;
+		cursor: pointer;
+
+		&:hover {
+			color: var(--bg-color-blue-lighter);
+			transform: scale(0.98);
+		}
 	}
 }
