--- a/src/app/main/board/task-view/task-view.scss
+++ b/src/app/main/board/task-view/task-view.scss
@@ -132,7 +132,6 @@
 			margin-bottom: 8px;
 			width: 100%;
 			height: 180px;
-			overflow-y: auto;
 		}
 
 		.assignee-headline {
@@ -144,6 +143,7 @@
 			display: flex;
 			flex-direction: column;
 			gap: 12px;
+      overflow-y: auto;
 
 			.assignee {
 				width: 100%;
@@ -181,7 +181,6 @@
 		.task-subtasks {
 			display: flex;
 			flex-direction: column;
-			overflow-y: auto;
 			height: 90px;
 
 			.subtask-headline {
@@ -192,6 +191,7 @@
 				display: flex;
 				flex-direction: column;
 				padding-left: 12px;
+        overflow-y: auto;
 
 				.subtask {
 					display: flex;
@@ -219,6 +219,9 @@
 		overflow-y: auto;
 
 		header {
+			height: 5%;
+			width: 100%;
+
 			.type {
 				border: none;
 				padding: 6px 12px 6px 12px;
