--- a/src/app/main/board/task-view/task-view.html
+++ b/src/app/main/board/task-view/task-view.html
@@ -73,7 +73,7 @@
 				@for (subtask of task?.subtasks; track subtask.id) {
 					<div class="subtask">
 						<div class="checkbox">
-							<input type="checkbox" [checked]="subtask.completed" />
+							<input type="checkbox" [checked]="subtask.completed" (change)="toggleSubtask(subtask.id)"/>
 						</div>
 						<div class="task">
 							<span>{{ subtask.title }}</span>
@@ -82,6 +82,7 @@
 				}
 			</div>
 		</div>
+
 	</div>
   <footer class="task-actions">
 			<app-button variant="edit" icon="images/contacs_section/edit.svg" (click)="onEditClick()">
