add Login Window

--- a/src/app/main/auth/login/login.html
+++ b/src/app/main/auth/login/login.html
@@ -4,10 +4,34 @@
 </div>
 
 <div class="login">
-  <div class="logo">
-    <img src="/images/join_logo/join_logo_dark.svg" alt="">
-  </div>
-  <div class="login">
-    <a routerLink="summary">Login</a>
-  </div>
+	<div class="logo">
+		<img src="/images/join_logo/join_logo_dark.svg" alt="" />
+	</div>
+	<div class="login-window">
+		<div class="headline">
+			<h1>Log in</h1>
+			<div class="seperator"></div>
+		</div>
+
+		<div class="inputs">
+			<input type="text" placeholder="Email" />
+			<input type="text" placeholder="Passwort" />
+		</div>
+
+		<div class="login-buttons">
+			<button class="login-button">
+				<a routerLink="summary">Login</a>
+			</button>
+			<button class="guest-login">
+				<a routerLink="summary">Guest Log in</a>
+			</button>
+		</div>
+
+    <div class="regisster">
+
+    </div>
+    <div class="legal-notes">
+
+    </div>
+	</div>
 </div>
